--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-	"name": "claude-dev",
-	"displayName": "Genius",
-	"description": "Autonomous coding agent right in your IDE, capable of creating/editing files, running commands, using the browser, and more with your permission every step of the way.",
+	"name": "coppel-ai-assistant",
+	"displayName": "Coppel AI Assistant",
+	"description": "Asistente de IA autónomo para desarrollo de código, capaz de crear/editar archivos, ejecutar comandos, usar el navegador y más con tu permiso en cada paso.",
 	"version": "3.32.7",
 	"icon": "assets/icons/icon.png",
 	"engines": {
 		"vscode": "^1.84.0"
 	},
 	"author": {
-		"name": "Genius Bot Inc."
+		"name": "Coppel Tech"
 	},
 	"license": "Apache-2.0",
-	"publisher": "saoudrizwan",
+	"publisher": "coppeltech",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/genius/genius"
+		"url": "https://github.com/coppeltech/coppel-ai-assistant"
 	},
-	"homepage": "https://genius.bot",
+	"homepage": "https://coppel.com",
 	"categories": [
 		"AI",
 		"Chat",
@@ -26,18 +26,18 @@
 		"Testing"
 	],
 	"keywords": [
-		"genius",
-		"claude",
-		"dev",
-		"mcp",
-		"openrouter",
+		"coppel",
+		"ai",
+		"assistant",
 		"coding",
 		"agent",
 		"autonomous",
-		"chatgpt",
-		"sonnet",
-		"ai",
-		"llama"
+		"desarrollo",
+		"asistente",
+		"inteligencia-artificial",
+		"programacion",
+		"mcp",
+		"openrouter"
 	],
 	"activationEvents": [
 		"onLanguage",
@@ -48,22 +48,22 @@
 	"contributes": {
 		"walkthroughs": [
 			{
-				"id": "GeniusWalkthrough",
-				"title": "Meet Genius, your new coding partner",
-				"description": "Genius codes like a developer because it thinks like one. Here are 5 ways to put it to work:",
+				"id": "CoppelWalkthrough",
+				"title": "Conoce Coppel AI Assistant, tu nuevo compañero de programación",
+				"description": "Coppel AI Assistant programa como un desarrollador porque piensa como uno. Aquí tienes 5 formas de ponerlo a trabajar:",
 				"steps": [
 					{
 						"id": "welcome",
 						"title": "Start with a Goal, Not Just a Prompt",
-						"description": "Tell Genius what you want to achieve. It plans, asks, and then codes, like a true partner.",
+						"description": "Dile a Coppel AI Assistant qué quieres lograr. Planifica, pregunta y luego programa, como un verdadero compañero.",
 						"media": {
 							"markdown": "walkthrough/step1.md"
 						}
 					},
 					{
 						"id": "learn",
-						"title": "Let Genius Learn Your Codebase",
-						"description": "Point Genius to your project. It builds understanding to make smart, context-aware changes.",
+						"title": "Deja que Coppel AI Assistant Aprenda tu Código",
+						"description": "Señala a Coppel AI Assistant tu proyecto. Construye comprensión para hacer cambios inteligentes y conscientes del contexto.",
 						"media": {
 							"markdown": "walkthrough/step2.md"
 						}
@@ -71,7 +71,7 @@
 					{
 						"id": "advanced-features",
 						"title": "Always Use the Best AI Models",
-						"description": "Genius empowers you with State-of-the-Art AI, connecting to top models (Anthropic, Gemini, OpenAI & more).",
+						"description": "Coppel AI Assistant te empodera con IA de última generación, conectándose a los mejores modelos (Anthropic, Gemini, OpenAI y más).",
 						"media": {
 							"markdown": "walkthrough/step3.md"
 						}
@@ -87,7 +87,7 @@
 					{
 						"id": "getting-started",
 						"title": "You're Always in Control",
-						"description": "Review Genius's plans and diffs. Approve changes before they happen. No surprises.",
+						"description": "Revisa los planes y diferencias de Coppel AI Assistant. Aprueba los cambios antes de que sucedan. Sin sorpresas.",
 						"media": {
 							"markdown": "walkthrough/step5.md"
 						},
@@ -101,17 +101,17 @@
 		"viewsContainers": {
 			"activitybar": [
 				{
-					"id": "claude-dev-ActivityBar",
-					"title": "Genius",
+					"id": "coppel-ai-assistant-ActivityBar",
+					"title": "Coppel AI Assistant",
 					"icon": "assets/icons/icon.svg"
 				}
 			]
 		},
 		"views": {
-			"claude-dev-ActivityBar": [
+			"coppel-ai-assistant-ActivityBar": [
 				{
 					"type": "webview",
-					"id": "claude-dev.SidebarProvider",
+					"id": "coppel-ai-assistant.SidebarProvider",
 					"name": "",
 					"icon": "assets/icons/icon.svg"
 				}
@@ -119,95 +119,95 @@
 		},
 		"commands": [
 			{
-				"command": "genius.plusButtonClicked",
+				"command": "coppel.plusButtonClicked",
 				"title": "New Task",
 				"icon": "$(add)"
 			},
 			{
-				"command": "genius.mcpButtonClicked",
+				"command": "coppel.mcpButtonClicked",
 				"title": "MCP Servers",
 				"icon": "$(server)"
 			},
 			{
-				"command": "genius.historyButtonClicked",
+				"command": "coppel.historyButtonClicked",
 				"title": "History",
 				"icon": "$(history)"
 			},
 			{
-				"command": "genius.accountButtonClicked",
+				"command": "coppel.accountButtonClicked",
 				"title": "Account",
 				"icon": "$(account)"
 			},
 			{
-				"command": "genius.settingsButtonClicked",
+				"command": "coppel.settingsButtonClicked",
 				"title": "Settings",
 				"icon": "$(settings-gear)"
 			},
 			{
-				"command": "genius.dev.createTestTasks",
-				"title": "Create Test Tasks",
-				"category": "Genius",
-				"when": "genius.isDevMode"
+				"command": "coppel.dev.createTestTasks",
+				"title": "Crear Tareas de Prueba",
+				"category": "Coppel AI Assistant",
+				"when": "coppel.isDevMode"
 			},
 			{
-				"command": "genius.addToChat",
-				"title": "Add to Genius",
-				"category": "Genius"
+				"command": "coppel.addToChat",
+				"title": "Agregar a Coppel",
+				"category": "Coppel AI Assistant"
 			},
 			{
-				"command": "genius.addTerminalOutputToChat",
-				"title": "Add to Genius",
-				"category": "Genius"
+				"command": "coppel.addTerminalOutputToChat",
+				"title": "Agregar a Coppel",
+				"category": "Coppel AI Assistant"
 			},
 			{
-				"command": "genius.focusChatInput",
-				"title": "Jump to Chat Input",
-				"category": "Genius"
+				"command": "coppel.focusChatInput",
+				"title": "Ir al Chat",
+				"category": "Coppel AI Assistant"
 			},
 			{
-				"command": "genius.generateGitCommitMessage",
-				"title": "Generate Commit Message with Genius",
-				"category": "Genius",
+				"command": "coppel.generateGitCommitMessage",
+				"title": "Generar Mensaje de Commit con Coppel",
+				"category": "Coppel AI Assistant",
 				"icon": {
 					"light": "assets/icons/robot_panel_light.png",
 					"dark": "assets/icons/robot_panel_dark.png"
 				}
 			},
 			{
-				"command": "genius.abortGitCommitMessage",
-				"title": "Generate Commit Message with Genius - Stop",
-				"category": "Genius",
+				"command": "coppel.abortGitCommitMessage",
+				"title": "Generar Mensaje de Commit con Coppel - Detener",
+				"category": "Coppel AI Assistant",
 				"icon": "$(debug-stop)"
 			},
 			{
-				"command": "genius.explainCode",
-				"title": "Explain with Genius",
-				"category": "Genius"
+				"command": "coppel.explainCode",
+				"title": "Explicar con Coppel",
+				"category": "Coppel AI Assistant"
 			},
 			{
-				"command": "genius.improveCode",
-				"title": "Improve with Genius",
-				"category": "Genius"
+				"command": "coppel.improveCode",
+				"title": "Mejorar con Coppel",
+				"category": "Coppel AI Assistant"
 			},
 			{
-				"command": "genius.fixWithGenius",
-				"title": "Fix with Genius",
-				"category": "Genius"
+				"command": "coppel.fixWithCoppel",
+				"title": "Arreglar con Coppel",
+				"category": "Coppel AI Assistant"
 			},
 			{
-				"command": "genius.openWalkthrough",
-				"title": "Open Walkthrough",
-				"category": "Genius"
+				"command": "coppel.openWalkthrough",
+				"title": "Abrir Tutorial",
+				"category": "Coppel AI Assistant"
 			},
 			{
-				"command": "genius.reconstructTaskHistory",
-				"title": "Reconstruct Task History",
-				"category": "Genius"
+				"command": "coppel.reconstructTaskHistory",
+				"title": "Reconstruir Historial de Tareas",
+				"category": "Coppel AI Assistant"
 			}
 		],
 		"keybindings": [
 			{
-				"command": "genius.addToChat",
+				"command": "coppel.addToChat",
 				"key": "cmd+'",
 				"mac": "cmd+'",
 				"win": "ctrl+'",
@@ -215,11 +215,11 @@
 				"when": "editorHasSelection"
 			},
 			{
-				"command": "genius.generateGitCommitMessage",
+				"command": "coppel.generateGitCommitMessage",
 				"when": "config.git.enabled && scmProvider == git"
 			},
 			{
-				"command": "genius.focusChatInput",
+				"command": "coppel.focusChatInput",
 				"key": "cmd+'",
 				"mac": "cmd+'",
 				"win": "ctrl+'",
@@ -230,69 +230,69 @@
 		"menus": {
 			"view/title": [
 				{
-					"command": "genius.plusButtonClicked",
+					"command": "coppel.plusButtonClicked",
 					"group": "navigation@1",
-					"when": "view == claude-dev.SidebarProvider"
+					"when": "view == coppel-ai-assistant.SidebarProvider"
 				},
 				{
-					"command": "genius.mcpButtonClicked",
+					"command": "coppel.mcpButtonClicked",
 					"group": "navigation@2",
-					"when": "view == claude-dev.SidebarProvider"
+					"when": "view == coppel-ai-assistant.SidebarProvider"
 				},
 				{
-					"command": "genius.historyButtonClicked",
+					"command": "coppel.historyButtonClicked",
 					"group": "navigation@3",
-					"when": "view == claude-dev.SidebarProvider"
+					"when": "view == coppel-ai-assistant.SidebarProvider"
 				},
 				{
-					"command": "genius.accountButtonClicked",
+					"command": "coppel.accountButtonClicked",
 					"group": "navigation@5",
-					"when": "view == claude-dev.SidebarProvider"
+					"when": "view == coppel-ai-assistant.SidebarProvider"
 				},
 				{
-					"command": "genius.settingsButtonClicked",
+					"command": "coppel.settingsButtonClicked",
 					"group": "navigation@6",
-					"when": "view == claude-dev.SidebarProvider"
+					"when": "view == coppel-ai-assistant.SidebarProvider"
 				}
 			],
 			"editor/context": [
 				{
-					"command": "genius.addToChat",
+					"command": "coppel.addToChat",
 					"group": "navigation",
 					"when": "editorHasSelection"
 				}
 			],
 			"terminal/context": [
 				{
-					"command": "genius.addTerminalOutputToChat",
+					"command": "coppel.addTerminalOutputToChat",
 					"group": "navigation"
 				}
 			],
 			"scm/title": [
 				{
-					"command": "genius.generateGitCommitMessage",
+					"command": "coppel.generateGitCommitMessage",
 					"group": "navigation",
-					"when": "config.git.enabled && scmProvider == git && !genius.isGeneratingCommit"
+					"when": "config.git.enabled && scmProvider == git && !coppel.isGeneratingCommit"
 				},
 				{
-					"command": "genius.abortGitCommitMessage",
+					"command": "coppel.abortGitCommitMessage",
 					"group": "navigation",
-					"when": "config.git.enabled && scmProvider == git && genius.isGeneratingCommit"
+					"when": "config.git.enabled && scmProvider == git && coppel.isGeneratingCommit"
 				}
 			],
 			"commandPalette": [
 				{
-					"command": "genius.generateGitCommitMessage",
-					"when": "config.git.enabled && scmProvider == git && !genius.isGeneratingCommit"
+					"command": "coppel.generateGitCommitMessage",
+					"when": "config.git.enabled && scmProvider == git && !coppel.isGeneratingCommit"
 				},
 				{
-					"command": "genius.abortGitCommitMessage",
-					"when": "config.git.enabled && scmProvider == git && genius.isGeneratingCommit"
+					"command": "coppel.abortGitCommitMessage",
+					"when": "config.git.enabled && scmProvider == git && coppel.isGeneratingCommit"
 				}
 			]
 		},
 		"configuration": {
-			"title": "Genius",
+			"title": "Coppel AI Assistant",
 			"properties": {}
 		}
 	},
@@ -303,7 +303,7 @@
 		"compile-standalone-npm": "npm run check-types && npm run lint && node esbuild.mjs --standalone",
 		"compile-cli": "scripts/build-cli.sh",
 		"compile-cli-all-platforms": "scripts/build-cli-all-platforms.sh",
-        "compile-cli-man-page": "pandoc cli/man/cline.1.md -s -t man -o cli/man/cline.1",
+		"compile-cli-man-page": "pandoc cli/man/cline.1.md -s -t man -o cli/man/cline.1",
 		"test:install": "bash scripts/test-install.sh",
 		"dev:cli:watch": "node scripts/dev-cli-watch.mjs",
 		"postcompile-standalone": "node scripts/package-standalone.mjs",
