--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"name": "Coppel Tech"
 	},
 	"license": "Apache-2.0",
-	"publisher": "coppeltech",
+	"publisher": "GENiusCodeAssistant",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/coppeltech/coppel-ai-assistant"
